[package]
name = "vulkan-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
lazy_static = "1"
log = "0.4"
nalgebra-glm = "0.18.0"
png = "0.17.10"
pretty_env_logger = "0.5.0"
thiserror = "1"
tobj = "4.0.0"
vulkano = "0.32.3"
winit = "0.27.3"
vulkano-win = "0.32.0"
